# diamondhacks-2026

./: .gitignore  README.md  imagine_api_docs.md  project.md
.claude/: settings.local.json
backend/: .env.example  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/.claude/: settings.local.json
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  agent.py  browser.py  reminders.py  transcript.py
backend/app/services/: __init__.py  browser_state.py  browser_use.py  reminders.py  transcript_bus.py
backend/docs/: agent-streaming.md  contracts.md
backend/src/: activity.ts  agent.ts  app.ts  audio.ts  bland.ts  browser-use.ts  config.ts  contracts.ts  crisis.ts  cron.ts  db.ts  emergency-bland-context.ts  files.ts  index.ts  multipart.ts  order-tasks.ts  reminder-scheduler.ts  reminders.ts  stt.ts  text-normalize.ts  transcript-bus.ts  tts.ts
backend/tests/: app.test.ts  test_api.py
bot/: capture_image.py  requirements.txt  silero_vad.py  wake_word.py  whisper_stt.py
frontend/: .env  index.html  package-lock.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: VoiceInput.svelte
frontend/src/lib/pages/: BrowserPage.svelte  RemindersPage.svelte  RequestedInfoPage.svelte  TranscriptionPage.svelte
ros2/src/human_follower/: package.xml  setup.cfg  setup.py
ros2/src/human_follower/config/: params.yaml
ros2/src/human_follower/launch/: human_follower.launch.py  (+1 more)
ros2/tests/: test_camera.py  test_chassis.py
(+2 files in other folders)
